Description
reactos-bootcd-0.4.14-dev-1455-g963d39b-x86-gcc-lin-dbg
Network details : Display inconsistencies (DNS server, Date Format)
- 2 DNS Server lines with only second one being showing the DNS server in use
- Wrong date format (not consistent with system configuration)
if (wcsftime(szBuffer, 100, L"%m/%d/%Y %H:%M:%S %p", leaseOptained) != 0)
if (wcsftime(szBuffer, 100, L"%m/%d/%Y %H:%M:%S %p", leaseExpire) != 0)
should be redesigned using GetTimeFormatW & GetDateFormatW
1st DNS blank line is a pure bug (to be removed)
I'm working on a fix (please assign to me)