[NETSHELL] Remove erroneous DNS Server line and fix date/time format (#2655)

CORE-16947